[workspace]
resolver = "2"
members = [
    "mnist",
    "mnist_hogwild",
    "mnist_rnn",
    "mnist_forward_forward",
    "regression",
    "reinforcement_learning",
    "super_resolution",
    "time_sequence_prediction",
    "vae",
    "dcgan",
    "fast_neural_style",
    "imagenet",
    "word_language_model",
    "language_translation",
    "snli",
    "siamese_network",
    "gcn",
    "gat",
    "distributed",
    "vision_transformer",
    "fx",
    "cpp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
theano = { path = "../neo-theano/crates/theano" }
theano-types = { path = "../neo-theano/crates/theano-types" }
theano-core = { path = "../neo-theano/crates/theano-core" }
theano-autograd = { path = "../neo-theano/crates/theano-autograd" }
theano-nn = { path = "../neo-theano/crates/theano-nn" }
theano-optim = { path = "../neo-theano/crates/theano-optim" }
theano-data = { path = "../neo-theano/crates/theano-data" }
theano-distributed = { path = "../neo-theano/crates/theano-distributed" }
theano-jit = { path = "../neo-theano/crates/theano-jit" }
theano-serialize = { path = "../neo-theano/crates/theano-serialize" }
rand = "0.8"
rand_distr = "0.4"
