[workspace]
resolver = "2"
members = [
    "mnist",
    "mnist_hogwild",
    "mnist_rnn",
    "mnist_forward_forward",
    "regression",
    "reinforcement_learning",
    "super_resolution",
    "time_sequence_prediction",
    "vae",
    "dcgan",
    "fast_neural_style",
    "imagenet",
    "word_language_model",
    "language_translation",
    "snli",
    "siamese_network",
    "gcn",
    "gat",
    "distributed",
    "vision_transformer",
    "fx",
    "cpp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
theano = { path = "../theano/crates/theano" }
theano-types = { path = "../theano/crates/theano-types" }
theano-core = { path = "../theano/crates/theano-core" }
theano-autograd = { path = "../theano/crates/theano-autograd" }
theano-nn = { path = "../theano/crates/theano-nn" }
theano-optim = { path = "../theano/crates/theano-optim" }
theano-data = { path = "../theano/crates/theano-data" }
theano-distributed = { path = "../theano/crates/theano-distributed" }
theano-jit = { path = "../theano/crates/theano-jit" }
theano-serialize = { path = "../theano/crates/theano-serialize" }
rand = "0.8"
rand_distr = "0.4"
