[package]
name = "fast_neural_style"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fast_neural_style"
path = "src/main.rs"

[[bin]]
name = "fast_neural_style-infer"
path = "src/bin/infer.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
theano-serialize = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
