[package]
name = "fx"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fx"
path = "src/main.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
theano-jit = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
