[package]
name = "mnist_hogwild"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mnist_hogwild"
path = "src/main.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
