[package]
name = "siamese_network"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "siamese_network"
path = "src/main.rs"

[[bin]]
name = "siamese_network-infer"
path = "src/bin/infer.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
theano-serialize = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
