[package]
name = "super_resolution"
version.workspace = true
edition.workspace = true

[[bin]]
name = "super_resolution"
path = "src/main.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
