[package]
name = "super_resolution"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "super_resolution"
path = "src/main.rs"

[[bin]]
name = "super-resolution-infer"
path = "src/bin/infer.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
theano-serialize = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
