[package]
name = "time_sequence_prediction"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "time_sequence_prediction"
path = "src/main.rs"

[[bin]]
name = "time_sequence_prediction-infer"
path = "src/bin/infer.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
theano-serialize = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
