[package]
name = "word_language_model"
version.workspace = true
edition.workspace = true

[lib]
name = "word_language_model"
path = "src/lib.rs"

[[bin]]
name = "word_language_model"
path = "src/main.rs"

[[bin]]
name = "word_language_model-infer"
path = "src/bin/infer.rs"

[dependencies]
theano = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
theano-nn = { workspace = true }
theano-optim = { workspace = true }
theano-data = { workspace = true }
theano-serialize = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
